Make TextStreamTest genericTestData unmodifiable