@@ -5,6 +5,7 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -15,7 +16,8 @@ import org.junit.Test;
  */
 public class TextStreamTest {
 
-    private static final List<String> genericTestData = List.of("a", "b", "c");
+    private static final List<String> genericTestData =
+        Collections.unmodifiableList(List.of("a", "b", "c"));
 
     @Test
     public void equals_itself_returnsTrue() throws Exception {
